--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,5 +7,30 @@
 </head>
 <body>
     <h1>Lasagna</h1>
+    <img src="../images/lasagna.webp" alt="tasty lasanga">
+    <h2>Description</h2>
+    <p>Lasagna is a type of pasta, possibly one of the oldest types, made of very wide, flat sheets. 
+        Either term can also refer to an Italian dish made of stacked layers of lasagna alternating with fillings such as ragù, béchamel sauce, vegetables, cheeses, and seasonings and spices.</p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>Meat</li>
+        <li>Onion</li>
+        <li>Garlic</li>
+        <li>Tomato</li>
+        <li>Sugar</li>
+        <li>Spices and seasonings</li>
+        <li>Lasagna noodles</li>
+        <li>Cheeses</li>
+        <li>Egg</li>
+    </ul>
+    <h2>Steps</h2>
+    <ol>
+        <li>Make the meat sauce</li>
+        <li>Cook the noodles</li>
+        <li>Make the ricotta mixture</li>
+        <li>Layer the lasagna according to the recipe instructions</li>
+        <li>Cover with foil and bake</li>
+        <li>Let the lasagna rest before serving</li>
+    </ol>
 </body>
 </html>
