--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lasagna</title>
 </head>
+
 <body>
     <h1>Lasagna</h1>
     <img src="../images/lasagna.webp" alt="tasty lasanga">
     <h2>Description</h2>
-    <p>Lasagna is a type of pasta, possibly one of the oldest types, made of very wide, flat sheets. 
-        Either term can also refer to an Italian dish made of stacked layers of lasagna alternating with fillings such as ragù, béchamel sauce, vegetables, cheeses, and seasonings and spices.</p>
+    <p>Lasagna is a type of pasta, possibly one of the oldest types, made of very wide, flat sheets.
+        Either term can also refer to an Italian dish made of stacked layers of lasagna alternating with fillings such
+        as ragù, béchamel sauce, vegetables, cheeses, and seasonings and spices.</p>
     <h2>Ingredients</h2>
     <ul>
         <li>Meat</li>
@@ -33,4 +36,5 @@
         <li>Let the lasagna rest before serving</li>
     </ol>
 </body>
+
 </html>
