--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 </head>
 
 <body>
-    <h1>Odin Recipes</h1>
-    <ul>
-        <li><a href="recipes/lasagna.html">Lasagna</a></li>
-        <li><a href="recipes/cinnamon-rolls.html">Cinammon Rolls</a></li>
-        <li><a href="recipes/bbq-ribs.html">BBQ Ribs</a></li>
+    <h1 class="home-header">Odin Recipes</h1>
+    <ul class="home-index">
+        <li class=><a href="recipes/lasagna.html">Lasagna</a></li>
+        <li class=><a href="recipes/cinnamon-rolls.html">Cinammon Rolls</a></li>
+        <li class=><a href="recipes/bbq-ribs.html">BBQ Ribs</a></li>
     </ul>
 </body>
 
